--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <form action="index.php">
-      <button type="submit"><h1>www</h1></button>
-    </form>
+      <button type="submit"><a href="index.php">masuk</a></button>
   </body>
 </html>
